# practice

./: .gitignore  OrderedTreeIterator.code-workspace  TestData.txt  compile-gcc.sh
2Sum/: small2.txt
AVLTree/: AVLTree.dot
Beal/: BigInt.nb  bad.txt  good.txt
C++Primer/: .cproject  .project  main.cpp
CountSmallerNumberSelf/: CMakeLists.txt  main.cpp
Fibonacci/: main.cpp
Karastuba/: .cproject  .project
LFUCache/: CMakeLists.txt  main.cpp
LongestContinuousSubarrayWithDiff/: CMakeLists.txt  main.cpp
MacHello/: HelloView.h  HelloView.m
MaxPointsOnALine/: CMakeLists.txt  main.cpp
MultiThreadCurl/: CMakeLists.txt  main.cpp  queries.h
Multithread/: .cproject  .project  main.cpp
NcursesMatrix/: CMakeLists.txt  main.cpp
OddEvenJump/: CMakeLists.txt  main.cpp  oddevenjump.h  oddevenjump_in.txt  oddevenjump_out.txt
OptimalAccountBalancing/: CMakeLists.txt  main.cpp
OrderedTreeIterator/: .gitignore  CMakeLists.txt  iterator.cpp  iterator.h  iterator_trait.cpp  iterator_trait.h  iterator_trait_postorder.cpp  iterator_trait_postorder.h  main.cpp  node.cpp  node.h  nonstd.h  samples.cpp  samples.h  tree.cpp  tree.h  unittest.cpp  unittest.h
QuickSort/: .cproject  .project  main.cpp
RabinKarp/: CMakeLists.txt  main.cpp
RemoveComments/: CMakeLists.txt  main.cpp
RobotRoomCleaner/: CMakeLists.txt  main.cpp
SCC/: SCC-2.txt
ShortestPathWithObstacleElim/: CMakeLists.txt  main.cpp
StringSearch/: CMakeLists.txt  bruteforce.h  bruteforcebackup.h  knuthmorrispratt.h  main.cpp  rabinkarp.h  repsubstr.h  search.h  (+1 more)
ncurses/: CMakeLists.txt  main.cpp
(+363 files in other folders)
